Updates JSONObjectUtils.getJSONObject to handle generic Map<String,Object> representations